--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div    class="img">
-        <img src="/Formulario JavaScript/img/buscar-encuesta.png" alt="">
+        <img src="/img/buscar-encuesta.png" alt="">
     </div>
 
     <form class="formulario">
